# gpualert-gpu-job-notifier

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  local_test.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  index.md  local_test.md  releasing.md  runbook.md
examples/: README.md  failing_training.py  long_running_job.py  simple_training.py
gpualert/: __init__.py  artifacts.py  cli.py  config.py  config_manager.py  launcher.py  log_manager.py  parse_errors.py  slurm.py  types.py
gpualert/notifier/: __init__.py  base.py  email_notifier.py
tests/: test_attach_artifacts_toggle.py  test_day2.py  test_day3.py  test_day3_slurm.py  test_day4.py  test_day5_cli.py  test_day5_wizard.py  test_day7_robustness.py  test_prelaunch_guarantee.py
