[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpualert"
version = "0.1.2"
description = "CLI tool for GPU/Slurm job notifications with automatic log and artifact delivery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Parv", email = "parv.nlpiitp@gmail.com"}]
keywords = ["gpu", "slurm", "hpc", "notifications", "email", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.1;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]

[project.scripts]
gpualert = "gpualert.cli:app"

[project.urls]
Homepage = "https://github.com/Parv-01/gpualert"
Repository = "https://github.com/Parv-01/gpualert"
Issues = "https://github.com/Parv-01/gpualert/issues"
Documentation = "https://github.com/Parv-01/gpualert/blob/main/docs/index.md"
Changelog = "https://github.com/Parv-01/gpualert/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpualert*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=gpualert --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
